# freva-storage-service

./: .coveragerc  .gitguardian.yml  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/dependabot/: constraints.txt
.github/workflows/: build_job.yml  ci_job.yml
dev-env/: docker-compose.yaml  release.py  start-stop-service.py
examples/: Databrowser-Query-Statistics.ipynb
src/freva_storage_service/: _version.py  app.py  cli.py  logger.py  response.py  run.py  utils.py
src/freva_storage_service/docs/: __init__.py
src/freva_storage_service/stats/: __init__.py  databrowser.py  schema.py
src/freva_storage_service/tests/: __init__.py  conftest.py  test_access.py  test_cli.py  test_databrowser_stats.py
